--- a/src/main/webapp/public/recursoEquipos.xhtml
+++ b/src/main/webapp/public/recursoEquipos.xhtml
@@ -108,8 +108,7 @@
 
                         <c:if  test="#{!loginBean.isVisitante()}">
                             <p:column headerText="Haga su reserva" style="text-align: center">
-                                <p:button outcome="verHorarios" value="Ver horarios">
-                                </p:button>
+                                <p:commandButton value="Ver horarios" title="View" actionListener="#{reservasBean.saveIdRecurso(element.id)}"></p:commandButton>
                             </p:column>
                         </c:if>
 
