--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -1,13 +1,15 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reservas</title>
+    <title>Horarios</title>
     <link rel = "icon" href ="https://yt3.ggpht.com/ytc/AKedOLQQOBfPPzh-vTH-tz76NykBAc2aU9r4z4UkeJog=s900-c-k-c0x00ffffff-no-rj"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script
@@ -15,9 +17,80 @@
             crossorigin="anonymous"
     ></script>
     <link href="https://fonts.googleapis.com/css2?family=Oswald;family=Staatliches;display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="../style/horario.css" />
 
 </h:head>
-<h:body>
-    <h1 style="background: red">Funcionalidad en construcción</h1>
+<h:body >
+    <header class="header">
+        <nav class="nav">
+            <div class="logos">
+                <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
+                <h1 class="tittleLogo" >Bibliotec ECI</h1>
+            </div>
+
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="/faces/index.xhtml" class="nav-menu-link nav-link">Home</a>
+                </li>
+
+                <li class="nav-menu-item">
+                    <a onclick="history.back()" class="nav-menu-link nav-link">Atras</a>
+                </li>
+
+                <li class="nav-menu-item">
+                    <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}"/>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
+
+    <h:form class="formulario">
+        <p:growl id="messages" showDetail="true"/>
+        #{reservasBean.loadEvents()}
+
+        <h:panelGrid columnClasses="value">
+            <p:schedule id="schedule" value="#{reservasBean.eventModel}" widgetVar="myschedule"
+                        rightHeaderTemplate="agendaDay,agendaWeek,month,listYear"
+                        timeZone="ZoneId.systemDefault()" clientTimeZone="local" draggable="false" style="background:#ffffff;">
+
+                <p:ajax event="eventSelect" listener="#{reservasBean.onEventSelect}" update="eventDetails1"
+                        oncomplete="PF('eventDetails1').show();" />
+
+                <p:ajax event="eventMove" listener="#{reservasBean.onEventMove}" update="messages"/>
+
+                <p:ajax event="eventResize" listener="#{reservasBean.onEventResize}" update="messages"/>
+
+            </p:schedule>
+        </h:panelGrid>
+
+        <p:dialog widgetVar="eventDetails1" header="Horario de reserva" showEffect="clip" hideEffect="clip" modal="true">
+
+            <h:panelGrid id="eventDetails1" border="1" columns="2" styleClass="table-style" value="">
+
+                <h:outputLabel for="id" value="Id Evento: " />
+                <h:outputLabel id="id" value="#{reservasBean.eventId}"/>
+
+                <h:outputLabel for="fechaInicio" value="Fecha Inicio: " />
+                <h:outputLabel id="fechaInicio" value="#{reservasBean.getFechainicio()}"/>
+
+                <h:outputLabel for="fechaFin" value="Fecha Fin: " />
+                <h:outputLabel id="fechaFin" value="#{reservasBean.getFechafin()}"/>
+
+                <h:outputLabel for="ubicacion" value="Ubicacion: " />
+                <h:outputLabel id="ubicacion" value="#{reservasBean.getHorarioactual().getRecurso().ubicacion}"/>
+
+                <h:outputLabel for="capacidad" value="Capacidad: " />
+                <h:outputLabel id="capacidad" value="#{reservasBean.consultarHorario(reservasBean.idRecurso,reservasBean.eventId).getRecurso().capacidad}"/>
+
+                <h:outputLabel for="descripcion" value="Descripcion: " />
+                <h:outputLabel id="descripcion" value="#{reservasBean.consultarHorario(reservasBean.idRecurso,reservasBean.eventId).getRecurso().descripcion}"/>
+
+            </h:panelGrid>
+
+            <p:button type="submit" value="Reservar" style="color:white; background: green; text-align: center;"/>
+
+        </p:dialog>
+    </h:form>
 </h:body>
 </html>
