--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
@@ -19,36 +19,44 @@
 </h:head>
 <h:body>
     <header class="header">
-        <nav class="nav">
-            <div class="logos">
-                <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
-                <h1 class="tittleLogo" >Biblioteca ECI</h1>
-            </div>
+        <h:form>
+            <nav class="nav">
+                <div class="logos">
+                    <img class="login" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg/1280px-Logo_de_la_Escuela_Colombiana_de_Ingenier%C3%ADa.svg.png" />
+                    <h1 class="tittleLogo" >Biblioteca ECI</h1>
+                </div>
 
-            <ul class="nav-menu">
+                <ul class="nav-menu">
 
-                <c:if  test="#{loginBean.isVisitante()}">
-                    <li class="nav-menu-item">
-                        <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active" action="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Iniciar Sesion</a>
-                    </li>
-                </c:if>
+                    <c:if  test="#{loginBean.isVisitante()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active" action="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Iniciar Sesion</a>
+                        </li>
+                    </c:if>
 
-                <c:if  test="#{loginBean.isEstudiante()}">
-                    <li class="nav-menu-item">
-                        <a href="/faces/public/misReservas.xhtml" class="nav-menu-link nav-link" action="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Mis Reservas</a>
-                    </li>
-                </c:if>
+                    <c:if  test="#{loginBean.isEstudiante()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/public/misReservas.xhtml" class="nav-menu-link nav-link" action="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Mis Reservas</a>
+                        </li>
+                        <li class="nav-menu-item">
+                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" inmediate="true"/>
+                        </li>
+                    </c:if>
 
-                <c:if  test="#{loginBean.isAdmin()}">
-                    <li class="nav-menu-item">
-                        <a href="/faces/admin/userReservas.xhtml" class="nav-menu-link nav-link" onclick="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Consultar Reservas</a>
-                    </li>
-                    <li class="nav-menu-item">
-                        <a href="#" class="nav-menu-link nav-link">Reporte</a>
-                    </li>
-                </c:if>
-            </ul>
-        </nav>
+                    <c:if  test="#{loginBean.isAdmin()}">
+                        <li class="nav-menu-item">
+                            <a href="/faces/admin/userReservas.xhtml" class="nav-menu-link nav-link" onclick="#{loginBean.setUltimaPagina('/faces/index.xhtml')}">Consultar Reservas</a>
+                        </li>
+                        <li class="nav-menu-item">
+                            <a href="#" class="nav-menu-link nav-link">Reporte</a>
+                        </li>
+                        <li class="nav-menu-item">
+                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" inmediate="true"/>
+                        </li>
+                    </c:if>
+                </ul>
+            </nav>
+        </h:form>
     </header>
 
     <main>
