--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -37,9 +37,17 @@
                     <a onclick="history.back()" class="nav-menu-link nav-link">Atras</a>
                 </li>
 
-                <li class="nav-menu-item">
-                    <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}"/>
-                </li>
+                <c:if  test="#{!loginBean.isVisitante()}">
+                    <li class="nav-menu-item">
+                        <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}"/>
+                    </li>
+                </c:if>
+
+                <c:if  test="#{loginBean.isVisitante()}">
+                    <li class="nav-menu-item">
+                        <a href="/faces/login.xhtml" class="nav-menu-link nav-link nav-menu-link_active" action="#{loginBean.setUltimaPagina('/faces/public/verHorarios.xhtml')}" >Iniciar Sesion</a>
+                    </li>
+                </c:if>
 
             </ul>
         </nav>
@@ -57,6 +65,11 @@
                 <p:ajax event="eventSelect" listener="#{reservasBean.onEventSelect}" update="eventDetails1"
                         oncomplete="PF('eventDetails1').show();" />
 
+                <c:if  test="#{!loginBean.isVisitante()}">
+                    <p:ajax event="dateSelect" listener="#{reservaBean.onDateSelect}" update="eventDetails"
+                            oncomplete="PF('eventDialog').show();"/>
+                </c:if>
+
                 <p:ajax event="eventMove" listener="#{reservasBean.onEventMove}" update="messages"/>
 
                 <p:ajax event="eventResize" listener="#{reservasBean.onEventResize}" update="messages"/>
@@ -64,12 +77,15 @@
             </p:schedule>
         </h:panelGrid>
 
-        <p:dialog widgetVar="eventDetails1" header="Horario de reserva" showEffect="clip" hideEffect="clip" modal="true">
+        <p:dialog widgetVar="eventDetails1" header="Informacion de la Reserva" showEffect="clip" hideEffect="clip" modal="true">
 
-            <h:panelGrid id="eventDetails1" border="1" columns="2" styleClass="table-style" value="">
+            <h:panelGrid id="eventDetails1" border="1" columns="2" styleClass="table-style" >
 
                 <h:outputLabel for="id" value="Id Evento: " />
                 <h:outputLabel id="id" value="#{reservasBean.eventId}"/>
+
+                <h:outputLabel for="Usuario" value="Usuario: " />
+                <h:outputLabel id="Usuario" value="#{reservasBean.getReservaactual().idUsuario}"/>
 
                 <h:outputLabel for="fechaInicio" value="Fecha Inicio: " />
                 <h:outputLabel id="fechaInicio" value="#{reservasBean.getFechainicio()}"/>
@@ -78,17 +94,65 @@
                 <h:outputLabel id="fechaFin" value="#{reservasBean.getFechafin()}"/>
 
                 <h:outputLabel for="ubicacion" value="Ubicacion: " />
-                <h:outputLabel id="ubicacion" value="#{reservasBean.getHorarioactual().getRecurso().ubicacion}"/>
+                <h:outputLabel id="ubicacion" value="#{reservasBean.getReservaactual().getRecurso().ubicacion}"/>
 
                 <h:outputLabel for="capacidad" value="Capacidad: " />
-                <h:outputLabel id="capacidad" value="#{reservasBean.consultarHorario(reservasBean.idRecurso,reservasBean.eventId).getRecurso().capacidad}"/>
+                <h:outputLabel id="capacidad" value="#{reservasBean.getReservaactual().getRecurso().capacidad}"/>
 
                 <h:outputLabel for="descripcion" value="Descripcion: " />
-                <h:outputLabel id="descripcion" value="#{reservasBean.consultarHorario(reservasBean.idRecurso,reservasBean.eventId).getRecurso().descripcion}"/>
+                <h:outputLabel id="descripcion" value="#{reservasBean.getReservaactual().getRecurso().descripcion}"/>
+
+                <h:outputLabel for="Recurrente" value="Recurrente: " />
+                <h:outputLabel id="Recurrente" value="#{reservasBean.getReservaactual().recurrente}"/>
 
             </h:panelGrid>
 
-            <p:button type="submit" value="Reservar" style="color:white; background: green; text-align: center;"/>
+        </p:dialog>
+
+
+        <p:dialog widgetVar="eventDialog" header="Reservar Recurso" showEffect="clip" hideEffect="clip" modal="true">
+
+            <h:panelGrid id="eventDetails" columns="2">
+
+                <p:outputLabel for="title" value="Nombre: "/>
+
+                <p:inputText id="title" value="#{reservaBean.event.title}" required="true"/>
+
+                <p:outputLabel for="inicio" value="Fecha Inicio:"/>
+                <p:calendar id="inicio" value="#{reservaBean.event.startDate}" pattern="dd/MM/yyyy HH:mm"/><br/>
+
+                <p:outputLabel for="fin" value="Fecha Fin:"/>
+                <p:calendar id="fin" value="#{reservaBean.event.startDate}" pattern="dd/MM/yyyy HH:mm"/><br/>
+
+
+                <label class="bmd-label-floating">Recurrencia</label>
+
+                <div>
+                    <div class="col-xs-6">
+                        <h:selectOneMenu value="#{reservaBean.frecuencia}" class="form-control">
+                            <f:selectItems value="#{reservaBean.getTipos()}"/>
+                        </h:selectOneMenu>
+                    </div>
+                    <div class="col-xs-6">
+                        <h:selectOneMenu id="console" value="#{reservaBean.fretiempo}" style="width:125px">
+                            <f:selectItem itemLabel="Select One" itemValue=""/>
+                            <f:selectItem itemLabel="1" itemValue="1"/>
+                            <f:selectItem itemLabel="2" itemValue="2"/>
+                            <f:selectItem itemLabel="3" itemValue="3"/>
+                            <f:selectItem itemLabel="4" itemValue="4"/>
+                            <f:selectItem itemLabel="5" itemValue="5"/>
+                            <f:selectItem itemLabel="6" itemValue="6"/>
+                            <f:facet name="footer">
+                                <p:separator/>
+                                <h:outputText value="3 consoles" style="font-weight:bold;"/>
+                            </f:facet>
+                        </h:selectOneMenu>
+                    </div>
+                </div>
+                <p:commandButton id="addButton" value="Reservar" action="#{reservaBean.addEvent(shiroBean.username)}"
+                                 oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
+
+            </h:panelGrid>
 
         </p:dialog>
     </h:form>
