Funcion registrar recurso terminada

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -51,7 +51,7 @@
                             <a href="#" class="nav-menu-link nav-link">Reporte</a>
                         </li>
                         <li class="nav-menu-item">
-                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" inmediate="true"/>
+                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" immediate="true"/>
                         </li>
                     </c:if>
                 </ul>
