--- a/src/main/webapp/public/recursoLibros.xhtml
+++ b/src/main/webapp/public/recursoLibros.xhtml
@@ -52,7 +52,7 @@
 
                 <c:if  test="#{loginBean.isAdmin()}">
                     <li class="nav-menu-item">
-                        <a href="/faces/admin/addLibro.xhtml" class="nav-menu-link nav-link">Añadir</a>
+                        <a href="/faces/admin/addRecurso.xhtml" class="nav-menu-link nav-link">Añadir</a>
                     </li>
                     <li class="nav-menu-item">
                         <a href="/faces/admin/deleteLibro.xhtml" class="nav-menu-link nav-link">Eliminar</a>
