--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -61,10 +61,16 @@
                         rightHeaderTemplate="agendaDay,agendaWeek,month,listYear"
                         timeZone="ZoneId.systemDefault()" clientTimeZone="local" draggable="false" style="background:#ffffff;">
 
+
                 <p:ajax event="eventSelect" listener="#{reservasBean.onEventSelect}" update="eventDetails1"
                         oncomplete="PF('eventDetails1').show();" />
 
-                <c:if  test="#{!loginBean.isVisitante()}">
+                <c:if  test="#{loginBean.isEstudiante()}">
+                    <p:ajax event="dateSelect" listener="#{reservasBean.onDateSelect}" update="eventDetails"
+                            oncomplete="PF('eventDialog').show();"/>
+                </c:if>
+
+                <c:if  test="#{loginBean.isAdmin()}">
                     <p:ajax event="dateSelect" listener="#{reservasBean.onDateSelect}" update="eventDetails"
                             oncomplete="PF('eventDialog').show();"/>
                 </c:if>
@@ -76,77 +82,106 @@
             </p:schedule>
         </h:panelGrid>
 
-        <p:dialog widgetVar="eventDetails1" header="Informacion de la Reserva" showEffect="clip" hideEffect="clip" modal="true">
+        <c:if  test="#{!reservasBean.isEventRestringido()}">
+            <p:dialog widgetVar="eventDetails1" header="Informacion de la Reserva" showEffect="clip" hideEffect="clip" modal="true">
+                <h:panelGrid id="eventDetails1" border="1" columns="2" styleClass="table-style" >
 
-            <h:panelGrid id="eventDetails1" border="1" columns="2" styleClass="table-style" >
+                    <h:outputLabel for="id" value="Id Evento: " />
+                    <h:outputLabel id="id" value="#{reservasBean.eventId}"/>
 
-                <h:outputLabel for="id" value="Id Evento: " />
-                <h:outputLabel id="id" value="#{reservasBean.eventId}"/>
+                    <h:outputLabel for="Usuario" value="Usuario: " />
+                    <h:outputLabel id="Usuario" value="#{reservasBean.getReservaactual().idUsuario}"/>
 
-                <h:outputLabel for="Usuario" value="Usuario: " />
-                <h:outputLabel id="Usuario" value="#{reservasBean.getReservaactual().idUsuario}"/>
+                    <h:outputLabel for="fechaInicio" value="Fecha Inicio: " />
+                    <h:outputLabel id="fechaInicio" value="#{reservasBean.getFechainicio()}"/>
 
-                <h:outputLabel for="fechaInicio" value="Fecha Inicio: " />
-                <h:outputLabel id="fechaInicio" value="#{reservasBean.getFechainicio()}"/>
+                    <h:outputLabel for="fechaFin" value="Fecha Fin: " />
+                    <h:outputLabel id="fechaFin" value="#{reservasBean.getFechafin()}"/>
 
-                <h:outputLabel for="fechaFin" value="Fecha Fin: " />
-                <h:outputLabel id="fechaFin" value="#{reservasBean.getFechafin()}"/>
+                    <h:outputLabel for="ubicacion" value="Ubicacion: " />
+                    <h:outputLabel id="ubicacion" value="#{reservasBean.getReservaactual().getRecurso().ubicacion}"/>
 
-                <h:outputLabel for="ubicacion" value="Ubicacion: " />
-                <h:outputLabel id="ubicacion" value="#{reservasBean.getReservaactual().getRecurso().ubicacion}"/>
+                    <h:outputLabel for="capacidad" value="Capacidad: " />
+                    <h:outputLabel id="capacidad" value="#{reservasBean.getReservaactual().getRecurso().capacidad}"/>
 
-                <h:outputLabel for="capacidad" value="Capacidad: " />
-                <h:outputLabel id="capacidad" value="#{reservasBean.getReservaactual().getRecurso().capacidad}"/>
+                    <h:outputLabel for="descripcion" value="Descripcion: " />
+                    <h:outputLabel id="descripcion" value="#{reservasBean.getReservaactual().getRecurso().descripcion}"/>
 
-                <h:outputLabel for="descripcion" value="Descripcion: " />
-                <h:outputLabel id="descripcion" value="#{reservasBean.getReservaactual().getRecurso().descripcion}"/>
+                    <h:outputLabel for="Recurrente" value="Recurrente: " />
+                    <h:outputLabel id="Recurrente" value="#{reservasBean.getReservaactual().recurrente}"/>
 
-                <h:outputLabel for="Recurrente" value="Recurrente: " />
-                <h:outputLabel id="Recurrente" value="#{reservasBean.getReservaactual().recurrente}"/>
+                </h:panelGrid>
+            </p:dialog>
+        </c:if>
 
-            </h:panelGrid>
+        <c:if  test="#{reservasBean.isEventRestringido()}">
+            <p:dialog widgetVar="eventDetails1" header="Informacion de la Reserva" showEffect="clip" hideEffect="clip" modal="true">
+                <h:panelGrid id="eventDetails1" border="1" columns="2" styleClass="table-style" >
+                    <h:outputLabel for="id" value="Id Evento: " />
+                    <h:outputLabel id="id" value="#{reservasBean.eventId}"/>
+                </h:panelGrid>
+            </p:dialog>
+        </c:if>
 
-        </p:dialog>
+        <c:if  test="#{loginBean.isEstudiante()}">
+            <p:dialog widgetVar="eventDialog" header="Reservar Recurso" showEffect="clip" hideEffect="clip" modal="true">
 
+                <h:panelGrid id="eventDetails" columns="2">
 
-        <p:dialog widgetVar="eventDialog" header="Reservar Recurso" showEffect="clip" hideEffect="clip" modal="true">
+                    <p:outputLabel value="Id: "/>
+                    <p:outputLabel value="#{reservasBean.getRecursoactual().id}" required="true"/>
 
-            <h:panelGrid id="eventDetails" columns="2">
+                    <p:outputLabel value="Recurso: "/>
+                    <p:outputLabel value="#{reservasBean.getRecursoactual().tipo}" required="true"/>
 
-                <p:outputLabel value="Id: "/>
-                <p:outputLabel value="#{reservasBean.getRecursoactual().id}" required="true"/>
+                    <p:outputLabel value="Nombre: "/>
+                    <p:outputLabel value="#{reservasBean.getRecursoactual().nombre}" required="true"/>
 
-                <p:outputLabel value="Recurso: "/>
-                <p:outputLabel value="#{reservasBean.getRecursoactual().tipo}" required="true"/>
+                    <c:if  test="#{reservasBean.getRecursoactual().tipo == 'libro'}">
+                        <p:outputLabel value="Unidades: "/>
+                        <p:outputLabel value="#{reservasBean.getRecursoactual().capacidad}" required="true"/>
+                    </c:if>
 
-                <p:outputLabel value="Nombre: "/>
-                <p:outputLabel value="#{reservasBean.getRecursoactual().nombre}" required="true"/>
+                    <c:if  test="#{reservasBean.getRecursoactual().tipo == 'sala'}">
+                        <p:outputLabel value="Capacidad: "/>
+                        <p:outputLabel value="#{reservasBean.getRecursoactual().capacidad}" required="true"/>
+                    </c:if>
 
-                <c:if  test="#{reservasBean.getRecursoactual().tipo == 'libro'}">
-                    <p:outputLabel value="Unidades: "/>
-                    <p:outputLabel value="#{reservasBean.getRecursoactual().capacidad}" required="true"/>
-                </c:if>
+                    <p:outputLabel value="Descripcion: "/>
+                    <p:outputLabel value="#{reservasBean.getRecursoactual().descripcion}" required="true"/>
 
-                <c:if  test="#{reservasBean.getRecursoactual().tipo == 'sala'}">
-                    <p:outputLabel value="Capacidad: "/>
-                    <p:outputLabel value="#{reservasBean.getRecursoactual().capacidad}" required="true"/>
-                </c:if>
+                    <p:outputLabel for="inicio" value="Fecha Inicio:"/>
+                    <p:calendar id="inicio" value="#{reservasBean.getEvent().startDate}" pattern="dd/MM/yyyy HH:mm"/>
 
-                <p:outputLabel value="Descripcion: "/>
-                <p:outputLabel value="#{reservasBean.getRecursoactual().descripcion}" required="true"/>
+                    <p:outputLabel for="fin" value="Fecha Fin:"/>
+                    <p:calendar id="fin" value="#{reservasBean.getEvent().endDate}" pattern="dd/MM/yyyy HH:mm"/>
 
-                <p:outputLabel for="inicio" value="Fecha Inicio:"/>
-                <p:calendar id="inicio" value="#{reservasBean.getEvent().startDate}" pattern="dd/MM/yyyy HH:mm"/>
+                    <p:commandButton id="addButton" value="Reservar" action="#{reservasBean.addEvent(loginBean.user)}"
+                                     oncomplete="PF('myschedule').update();PF('eventDialog').hide);"/>
 
-                <p:outputLabel for="fin" value="Fecha Fin:"/>
-                <p:calendar id="fin" value="#{reservasBean.getEvent().endDate}" pattern="dd/MM/yyyy HH:mm"/>
+                </h:panelGrid>
+            </p:dialog>
+        </c:if>
 
-                <p:commandButton id="addButton" value="Reservar" action="#{reservasBean.addEvent(loginBean.user)}"
-                                 oncomplete="PF('myschedule').update();PF('eventDialog').hide);"/>
+        <c:if  test="#{loginBean.isAdmin()}">
+            <p:dialog widgetVar="eventDialog" header="Restringir Horario" showEffect="clip" hideEffect="clip" modal="true">
 
-            </h:panelGrid>
+                <h:panelGrid id="eventDetails" columns="2">
 
-        </p:dialog>
+                    <p:outputLabel for="inicio" value="Fecha Inicio:"/>
+                    <p:calendar id="inicio" value="#{reservasBean.getEvent().startDate}" pattern="dd/MM/yyyy HH:mm"/>
+
+                    <p:outputLabel for="fin" value="Fecha Fin:"/>
+                    <p:calendar id="fin" value="#{reservasBean.getEvent().endDate}" pattern="dd/MM/yyyy HH:mm"/>
+
+                    <p:commandButton id="addButton" value="Reservar" action="#{reservasBean.addEventAdmin(loginBean.user)}"
+                                     oncomplete="PF('myschedule').update();PF('eventDialog').hide);"/>
+
+                </h:panelGrid>
+
+            </p:dialog>
+        </c:if>
+
     </h:form>
 </h:body>
 </html>
