--- a/src/main/webapp/public/recursoLibros.xhtml
+++ b/src/main/webapp/public/recursoLibros.xhtml
@@ -105,8 +105,14 @@
                         </p:column>
 
                         <p:column headerText="Haga su reserva" style="text-align: center">
-                            <p:commandButton value="Ver horarios" title="View" actionListener="#{reservasBean.saveIdRecurso(element.id)}"></p:commandButton>
+                            <p:commandButton value="Ver horarios" title="View" actionListener="#{reservasBean.saveIdRecurso(element.id)}"/>
                         </p:column>
+
+                        <c:if test="#{loginBean.isAdmin()}">
+                            <p:column headerText="Cambiar estado" style="text-align: center">
+                                <p:commandButton value="Ver horarios" title="View" actionListener="#{recursosBean.seleccionarRecurso(element.id)}"/>
+                            </p:column>
+                        </c:if>
 
                     </p:dataTable>
                 </h:form>
