El administrador puede ver todos los recursos, sin importar su estado, de esta forma puede cambiar el estado de cualquier recurso

--- a/src/main/webapp/public/verHorarios.xhtml
+++ b/src/main/webapp/public/verHorarios.xhtml
@@ -52,7 +52,7 @@
                 </ul>
             </nav>
 
-            <p:messages id="messages" showDetail="true" closable="true">
+            <p:messages id="messagesError" showDetail="true" closable="true">
                 <p:autoUpdate/>
             </p:messages>
 
