--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -63,8 +63,16 @@
                         <li class="nav-menu-item">
                             <a href="#" class="nav-menu-link nav-link">Reporte</a>
                         </li>
-                        <li class="nav-menu-item">
-                            <p:commandButton value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" immediate="true"/>
+                        <li class="nav-menu_visible" >
+                            <div>
+                                <i class="fas  icon" style="color: white; width: 20px;"/>
+                            </div>
+                            <p:panelMenu>
+                                <p:submenu label="Sesión" style="width: 165px; ">
+                                    <p:menuitem icon="fas fa-user icon" value="#{usuariosBean.getUsuario(loginBean.user).nombre}"/>
+                                    <p:menuitem icon="fas fa-check-circle icon" value="Cerrar Sesion" action="#{loginBean.logOut('/faces/index.xhtml')}" immediate="true"/>
+                                </p:submenu>
+                            </p:panelMenu>
                         </li>
                     </c:if>
                 </ul>
