--- a/src/main/webapp/admin/addRecurso.xhtml
+++ b/src/main/webapp/admin/addRecurso.xhtml
@@ -97,7 +97,7 @@
             </div>
 
 
-            <p:commandButton class="button" value="Registrar" actionListener="#{recursosBean.nuevoRecurso}"/>
+            <p:commandButton class="button" value="Registrar" actionListener="#{recursosBean.nuevoRecurso()}"/>
 
             <p:commandButton  class="buttonCancel" value="Cancelar" onclick="history.back()" />
             <p>Todos los campos tienen que estar completados.</p>
