--- a/src/main/webapp/public/misReservas.xhtml
+++ b/src/main/webapp/public/misReservas.xhtml
@@ -21,6 +21,9 @@
 
 </h:head>
 <h:body >
+    <p:messages id="messages" showDetail="true" closable="true">
+        <p:autoUpdate/>
+    </p:messages>
     <header class="header">
         <nav class="nav">
             <div class="logos">
@@ -125,25 +128,25 @@
                                 <center>
                                     <h:panelGrid columns="2" cellpadding="7" style="background: #3FFE0E">
                                         <h:outputLabel for="IdRecurso" value="Id Recurso:" />
-                                        <h:outputText id="IdRecurso" value="#{element.recurso.id}"/>
+                                        <h:outputText id="IdRecursoA" value="#{element.recurso.id}"/>
 
                                         <h:outputLabel for="ubicacion" value="Ubicacion:" />
-                                        <h:outputText id="ubicacion" value="#{element.recurso.ubicacion}"/>
+                                        <h:outputText id="ubicacionA" value="#{element.recurso.ubicacion}"/>
 
                                         <h:outputLabel for="capacidad" value="Capacidad:" />
-                                        <h:outputText id="capacidad" value="#{element.recurso.capacidad}"/>
+                                        <h:outputText id="capacidadA" value="#{element.recurso.capacidad}"/>
 
                                         <h:outputLabel for="Descripcion" value="Descripcion:" />
-                                        <h:outputText id="Descripcion" value="#{element.recurso.descripcion}"/>
+                                        <h:outputText id="DescripcionA" value="#{element.recurso.descripcion}"/>
 
                                         <h:outputLabel for="fechaSolicitud" value="Fecha Solicitud:" />
-                                        <h:outputText id="fechaSolicitud" value="#{element.fechaSolicitud}"/>
+                                        <h:outputText id="fechaSolicitudA" value="#{element.fechaSolicitud}"/>
 
                                         <h:outputLabel for="recurente" value="Recurrente:" />
-                                        <h:outputText id="recurente" value="#{element.recurrente}"/>
+                                        <h:outputText id="recurenteA" value="#{element.recurrente}"/>
 
                                         <h:outputLabel for="fechare" value="Proxima Ocurrencia:" />
-                                        <h:outputText id="fechare" value="#{element.getProximarecurrencia()}"/>
+                                        <h:outputText id="fechareA" value="#{element.getProximarecurrencia()}"/>
 
                                     </h:panelGrid>
                                 </center>
@@ -154,7 +157,7 @@
 
                     <c:if  test="#{loginBean.isEstudiante()}">
 
-                        <p:dataTable id="tblA" var="element" value="#{reservasBean.consultarPorUsuarioPocaInfo(loginBean.user)}" rows="10"
+                        <p:dataTable id="tblE" var="element" value="#{reservasBean.consultarPorUsuarioPocaInfo(loginBean.user)}" rows="10"
                                      paginator="true"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {Exporters}"
                                      currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
@@ -185,7 +188,7 @@
                             </p:column>
 
                             <p:column headerText="Cancelar" style="text-align: center; width:12rem;" >
-                                <p:button outcome="/faces/public/cancelarReserva.xhtml" value="Cancelar" style="background: red;"/>
+                                <h:commandButton value="Cancelar" style="background: red;" actionListener="#{reservasBean.cancelarReserva(element.id)}"/>
                             </p:column>
 
                             <p:rowExpansion>
@@ -193,6 +196,9 @@
                                     <h:panelGrid columns="2" cellpadding="7" style="background: #3FFE0E">
                                         <h:outputLabel for="IdRecurso" value="Id Recurso:" />
                                         <h:outputText id="IdRecurso" value="#{element.recurso.id}"/>
+
+                                        <h:outputLabel for="estado" value="Estado: "/>
+                                        <h:outputLabel id="estado" value="#{element.recurso}"/>
 
                                         <h:outputLabel for="ubicacion" value="Ubicacion:" />
                                         <h:outputText id="ubicacion" value="#{element.recurso.ubicacion}"/>
